# Shaded

./: LICENSE  README.md  jitpack.yml  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
samples/: build.gradle.kts
samples/src/androidTest/java/io/sifr/samples/: ExampleInstrumentedTest.kt
samples/src/main/: AndroidManifest.xml
samples/src/main/java/io/sifr/samples/: MainActivity.kt
samples/src/main/java/io/sifr/samples/ui/: CustomBlurComparisonTest.kt
samples/src/main/res/values/: strings.xml  themes.xml
samples/src/test/java/io/sifr/samples/: ExampleUnitTest.kt
shaded/: build.gradle.kts
shaded/src/main/cpp/: CMakeLists.txt  blur_renderer.cpp  blur_renderer.h  egl_helper.cpp  egl_helper.h  native-lib.cpp  renderer.cpp  unbounded_blur.cpp  unbounded_blur.h
shaded/src/main/cpp/core/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  VertexBuffer.cpp  VertexBuffer.h
shaded/src/main/cpp/res/shaders/: blur.vert
shaded/src/main/cpp/res/shaders/bounded_blur/: horizontalPassBoundedBlur.frag  verticalPassBoundedBlur.frag
shaded/src/main/cpp/res/shaders/unbounded_blur/: horizontalPassUnboundedBlur.frag  verticalPassUnboundedBlur.frag
shaded/src/main/java/io/sifr/shaded/blurProcessor/: BlurEdgeTreatment.kt  BlurNative.kt  BlurProcessor.kt
shaded/src/main/java/io/sifr/shaded/modifiers/: Blur.kt
shaded/src/main/java/io/sifr/shaded/samples/: BlurSamples.kt
shaded/src/main/java/io/sifr/shaded/util/: BlurBitmap.kt  CreateBitmapFromPicture.kt  RecordComposable.kt  mappers.kt
(+3 files in other folders)
